feat: add Text instance uploading
