# src/main/java/dev/razafindratelo/misinformation/endpoint/rest/controller/model/TextRequest.java
@@ -1,0 +1,7 @@
+package dev.razafindratelo.misinformation.endpoint.rest.controller.model;
+
+import jakarta.validation.constraints.Email;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
+
+public record TextRequest(@Email @NotNull @NotBlank String email, @NotNull @NotBlank String text) {}
